--- a/Curriculum/Curriculum.csproj
+++ b/Curriculum/Curriculum.csproj
@@ -60,6 +60,9 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="XML">
+      <HintPath>..\XML\bin\Release\XML.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="escreveArquivos.cs" />
@@ -87,7 +90,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="xml.cs" />
     <EmbeddedResource Include="Curriculum select.resx">
       <DependentUpon>Curriculum select.cs</DependentUpon>
     </EmbeddedResource>
